--- a/src/content/docs/docs/guides/distr-on-macos.mdx
+++ b/src/content/docs/docs/guides/distr-on-macos.mdx
@@ -6,9 +6,9 @@ sidebar:
 ---
 import {Aside, Code, TabItem, Tabs} from '@astrojs/starlight/components';
 
-Distr is designed to be as versatile as possible. That involves being able to run on a variety of operating systems successfully. While most enterprise environments run on Linux-based VMs, there are always exceptions. What if, for testing purposed for instance, MacOS is the chosen operating system for running Distr agents?
+Distr is designed to be as versatile as possible. That involves being able to run on a variety of operating systems successfully. While most enterprise environments run on Linux-based VMs, there are always exceptions. What if, for testing purposed for instance, macOS is the chosen operating system for running Distr agents?
 
-If you're using Windows or Linux, the [Quickstart guide](/docs/getting-started/quickstart/) should cover everything you need. But if you're setting up Distr on MacOS, follow these steps to ensure a smooth deployment experience.
+If you're using Windows or Linux, the [Quickstart guide](/docs/getting-started/quickstart/) should cover everything you need. But if you're setting up Distr on macOS, follow these steps to ensure a smooth deployment experience.
 
 ## Running Distr agents
 <Aside type="note">
@@ -25,11 +25,24 @@ Before you begin, make sure you have:
 ## 1. Install Docker Desktop
 First, install [Docker Desktop for Mac](https://docs.docker.com/desktop/setup/install/mac-install/). Follow the installation instructions provided by Docker.
 
+### 1.1 Delete Distr volume on Docker Desktop
+
+<Aside type="note">
+If you've already tried to install Distr on Docker Desktop and failed to deploy an application, a volume named `distr_scratch` has been created. This volume is used to store the Distr agent's data. If it exists, you need to delete it.
+</Aside>
+
+Delete the volume, run:
+```sh
+docker volume rm distr_scratch
+```
+
 ## 2. Verify the Docker Context
-Check the local Docker context being used:
 
-**Run:** 
+<Aside type="caution">
+When Docker Desktop runs on macOS, it creates a lightweight Linux VM, and the `desktop-linux` context points to the Docker daemon within this VM. However, Distr expects to connect to the default Docker socket (`/var/run/docker.sock`). This mismatch can cause connectivity issues, especially when pulling or deploying container images. Setting the context to `default` aligns the Docker CLI with the expected Docker endpoint, ensuring Distr can interact with the Docker daemon properly.
+</Aside>
 
+Check the current Docker context, run:
 ```sh
 docker context ls
 ```
@@ -41,10 +54,6 @@ NAME              DESCRIPTION                               DOCKER ENDPOINT     
 default           Current DOCKER_HOST based configuration   unix:///var/run/docker.sock
 desktop-linux *   Docker Desktop                            unix:///Users/jakepage/.docker/run/docker.sock
 ```
-
-<Aside type="caution">
-When Docker Desktop runs on macOS, it creates a lightweight Linux VM, and the `desktop-linux` context points to the Docker daemon within this VM. However, Distr expects to connect to the default Docker socket (`/var/run/docker.sock`). This mismatch can cause connectivity issues, especially when pulling or deploying container images. Setting the context to `default` aligns the Docker CLI with the expected Docker endpoint, ensuring Distr can interact with the Docker daemon properly.
-</Aside>
 
 If Docker is set to the `desktop-linux` context, you might encounter errors in the container logs like:
 
@@ -68,114 +77,74 @@ default *       Current DOCKER_HOST based configuration   unix:///var/run/docker
 desktop-linux   Docker Desktop                            unix:///Users/jakepage/.docker/run/docker.sock
 ```
 
-This should be all that's needed, now [test](/docs/guides/distr-on-macos/#5-test-the-setup) your setup by creating a deployment on Distr.
+## 4. Update the Docker Config File
 
-## 4. Test the Setup
-
-To verify everything is configured correctly, try [deploying an application](/docs/guides/onboarding-a-docker-app/#creating-a-new-deployment) through Distr. If there are no errors related to Docker socket access, your setup is good to go.
-
-
-If, during installation, you encounter the following error message:
-
-```sh
-docker.credentials.errors.InitializationError: docker-credential-desktop not installed or not available in PATH
-```
-then you will need to update the Docker config file in step 5.
-
-## 5. Update the Docker Config File
-
-The above error indicates that Docker is configured to use a credential store called "desktop," but the corresponding executable `docker-credential-desktop` is either not installed or not accessible through the system's PATH.
-
-#### Why this happens
-
-<Aside tag="info">
-When Docker is configured to use a credential store, it tries to invoke an external binary (docker-credential-NAME). On macOS, `docker-credential-osxkeychain` is generally preferred because it integrates well with the macOS Keychain. Using `docker-credential-desktop` can lead to path issues, especially if the Docker Desktop installation did not properly add this helper to the system's PATH.
-</Aside>
+If you're using the Distr agent on macOS, note that it does not rely on Docker's credential store (`credStore`). Having this setting in your Docker configuration can sometimes cause authentication issues. To prevent potential errors, it's best to remove the `credStore` entry from the Docker config file entirely.
 
 #### How to fix it
-Check your docker config file and verify which `credsStore` is being used? 
 
-Run:
+1. **Check your current Docker config file**
 
-```sh
-cat ~/.docker/config.json
-```
-Expected output:
+   Run the following command to inspect your configuration:
 
-```json
-{
-    "auths": {},
-    "credStore" : "desktop"
-}
-```
+   ```sh
+   cat ~/.docker/config.json
+   ```
 
-#### Use `docker-credential-osxkeychain` instead.
+   If you see an entry like this:
 
-Since you're on a Mac, you could use `docker-credential-osxkeychain` instead of `docker-credential-desktop`.
+   ```json
+   {
+       "auths": {},
+       "credStore": "desktop"
+   }
+   ```
 
-Install `docker-credential-helper`
+   You'll need to remove the `credStore` line.
 
-```sh
-brew install docker-credential-helper
-```
+2. **Open the config file in a text editor**
 
-Verify `docker-credential-osxkeychain` is available.
+   Use `nano` to edit the Docker configuration:
 
-```sh
-$ docker-credential-osxkeychain version
-docker-credential-osxkeychain (github.com/docker/docker-credential-helpers) v0.8.2
-```
+   ```sh
+   nano ~/.docker/config.json
+   ```
 
-#### Edit the Docker config file
-Now, we need to update Docker's config file to use `osxkeychain` instead of `desktop`.
+3. **Remove the `credStore` line**
 
-#####  Open the config file in `nano` or Vim.
-Run this command in your terminal:
+   Inside the file, find the line that contains:
 
-```sh
-nano ~/.docker/config.json
-```
+   ```json
+   "credStore": "desktop"
+   ```
 
-This will open the file in a simple text editor inside your terminal.
+   Delete this line entirely, ensuring you don't leave a trailing comma that could cause JSON parsing errors.
 
-##### Find the `credStore` line
-Look for this line:
+   After editing, your file should look something like this:
 
-```json
-"credStore": "desktop"
-```
+   ```json
+   {
+       "auths": {}
+   }
+   ```
 
-##### Change `"desktop"` to `"osxkeychain"`
-Modify it so it looks like this:
+4. **Save the file**
 
-```json
-"credStore": "osxkeychain"
-```
+   - **Press `CTRL + X`** to exit.
+   - **Press `Y`** to confirm saving the changes.
+   - **Press `Enter`** to save with the same filename.
 
-Be careful not to delete the quotation marks or any commas.
+5. **Verify the change**
 
-##### Save the file
-Once you've made the change, follow these steps to save and exit:
+   Run:
 
-- **Press `CTRL + X`** to start exiting.
-- **Press `Y`** to confirm saving the changes.
-- **Press `Enter`** to save with the same filename.
+   ```sh
+   cat ~/.docker/config.json
+   ```
 
-##### Confirm the change
-Run:
+   Ensure that the `credStore` line is no longer present.
 
-```sh
-cat ~/.docker/config.json
-```
-
-You should see:
-
-```json
-{
-    "auths": {},
-    "credStore": "osxkeychain"
-}
-```
+Removing the `credStore` setting ensures that the Distr agent operates without credential store conflicts, reducing potential authentication issues.
 
 ## 6. Test the Setup
 
